@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v21.12.5-cur, done by cs@nop.
--;-;-;2021-12-05 07:08:39, took 00:06:22, with 100 workers, on 2500 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2021-12-05 09:01:40, took 00:06:02, with 100 workers, on 2500 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
