@@ -2525,4 +2525,3 @@ todo: more features with clean implementation
 todo: more randomizers
 todo: x25
 todo: default vrf for show commands
-todo: shame texts in cmd.err
