@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.12.5-cur, done by cs@nop.<br/>
-tested: 2021-12-05 07:08:39, took 00:06:22, with 100 workers, on 2500 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2021-12-05 09:01:40, took 00:06:02, with 100 workers, on 2500 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
